--- a/priv/lib-src/style.scss
+++ b/priv/lib-src/style.scss
@@ -15,7 +15,7 @@
 @import "components.footer";
 @import "components.keyword-list";
 @import "components.nav";
+@import "components.share-event";
 
 @import "template.edit";
 @import "template.logon";
-@import "utilities";
