--- a/priv/lib-src/_components.calendar.scss
+++ b/priv/lib-src/_components.calendar.scss
@@ -14,11 +14,11 @@
 
     @include breakpoint($largeBreakpoint) {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
         gap: 2em;
 
         > li:first-child {
-            grid-column: span 2;
+            grid-column: 1 / -1;
         }
     }
 }
@@ -53,27 +53,28 @@
         margin: 0 0 0.5em;
         font-size: 1.2em;
     }
+}
 
-    time {
-        display: flex;
-        align-items: center;
+.c-calendar-item__date {
+    display: flex;
+    align-items: center;
+    flex-flow: row wrap;
+    gap: 0.5em;
+    margin: 0 0 0.5em;
+    text-transform: uppercase;
+
+    span {
+        display: inline-flex;
         gap: 0.5em;
-        margin: 0;
-        text-transform: uppercase;
+        align-items: center;
+        font-weight: bold;
+        color: var(--darkTheme);
 
-        span {
-            display: inline-flex;
-            gap: 0.5em;
-            align-items: center;
-            font-weight: bold;
-            color: var(--darkTheme);
-
-            &:after {
-                content: '';
-                width: 2px;
-                height: 0.7lh;
-                background: var(--darkTheme);
-            }
+        &:after {
+            content: '';
+            width: 2px;
+            height: 0.7lh;
+            background: var(--darkTheme);
         }
     }
 }
@@ -132,75 +133,6 @@
     margin: 0 0 0.5em;
 }
 
-[popover="auto"] {
-    inset: unset;
-    // width: 200px;
-    margin: 0;
-    position: absolute;
-    bottom: calc(anchor(top) + 20px);
-    justify-self: anchor-center;
-    padding: 8px;
-    border-radius: 6px;
-    background: var(--lightTheme);
-    box-shadow: 1px 1px 3px #999;
-    border: none;
-}
-
-.c-share-cal-btn {
-    display: inline-flex;
-    align-items: center;
-    gap: 1rem;
-    background: none;
-    border: 1px solid transparent;
-    text-decoration: underline;
-    text-underline-offset: 3px;
-    color: var(--darkTheme);
-
-    &:before {
-        content: '';
-        width: 2px;
-        height: 0.7lh;
-        background: var(--darkTheme);
-    }
-
-    svg {
-        height: 1.6rem;
-    }
-
-    .icon-bookmark__fill {
-        fill: transparent;
-    }
-
-    .icon-bookmark__stroke {
-        fill: var(--darkTheme);
-    }
-
-    @include setInteractive {
-        text-decoration: none;
-    }
-}
-
-.c-share-cal-btn:has(+ .c-share-cal:popover-open) {
-    text-decoration: none;
-
-    .icon-bookmark__fill {
-        fill: var(--darkTheme);
-    }
-}
-
-.c-share-cal {
-    font-size: 0.8em;
-}
-
-.c-share-cal__content {
-    @include striplist;
-
-    display: flex;
-    flex-flow: column wrap;
-    gap: 1rem;
-    align-items: start;
-}
-
 .c-calendar-item__details {
     margin-top: 0.3em;
 
@@ -255,4 +187,5 @@
     max-width: 70ch;
     padding: 1em;
     background: var(--lightTheme);
+    font-size: 0.9em;
 }
