--- a/priv/lib-src/_components.keyword-list.scss
+++ b/priv/lib-src/_components.keyword-list.scss
@@ -5,19 +5,43 @@
     gap: 0.5rem;
     margin: 0.5em 0 0 0;
     font-size: 0.7em;
+}
 
-    li {
-        padding: 0.2rem 0.7rem;
-        margin-bottom: 0.2rem;
-        background: color-mix(in srgb, var(--typographyColor), var(--bodyBg) 90%);
-        border-radius: 4px;
-    }
+.c-keyword-list__item {
+    display: inline-flex;
+    padding: 0.2rem 0.7rem;
+    margin-bottom: 0.2rem;
+    background: color-mix(in srgb, var(--typographyColor), var(--bodyBg) 90%);
+    border-radius: 4px;
+    border: none;
+    line-height: 1.4;
+    text-underline-offset: 1px;
 
-    li:has(.c-keyword-list__tickets) {
+    &.-tickets {
         background: var(--flagYellow);
 
         @media (prefers-color-scheme: dark) {
             background: color-mix(in srgb, var(--flagYellow), var(--bodyBg) 30%);
         }
     }
+
+    &.-signup {
+        background: var(--flagPurple);
+
+        @media (prefers-color-scheme: dark) {
+            background: color-mix(in srgb, var(--flagPurple), var(--bodyBg) 30%);
+        }
+    }
+}
+
+button.c-keyword-list__item {
+    border: 1px solid color-mix(in srgb, var(--typographyColor), var(--bodyBg) 70%);
+
+    &:hover {
+        background: color-mix(in srgb, var(--typographyColor), var(--bodyBg) 70%);
+    }
+}
+
+.c-keyword-list__item:has(+ .c-keyword-explan:popover-open) {
+    background: color-mix(in srgb, var(--typographyColor), var(--bodyBg) 70%);
 }
