--- a/priv/lib-src/_elements.body.scss
+++ b/priv/lib-src/_elements.body.scss
@@ -3,6 +3,7 @@ html {
     box-sizing: border-box;
     scroll-behavior: smooth;
     font-size: 10px;
+    color-scheme: light dark;
 }
 
 *, *:before, *:after {
