--- a/priv/lib-src/_elements.form.scss
+++ b/priv/lib-src/_elements.form.scss
@@ -1,4 +1,12 @@
 form {
+    .form-control {
+        margin-bottom: 1em;
+        color: var(--typographyColor);
+        font-family: inherit;
+        font-size: inherit;
+        border: 2px solid var(--typographyColor);
+    }
+    
     input[type="text"].form-control,
     input[type="text"],
     input[type="search"].form-control,
@@ -12,25 +20,16 @@ form {
         width: 100%;
         height: 4.5rem;
         padding: 0 1rem;
-        border: 2px solid var(--typographyColor);
-        font-family: inherit;
-        font-size: inherit;
-    }
-
-    .form-control {
-        margin-bottom: 1em;
-    }
-
-    fieldset {
-        padding: 0;
     }
 
     textarea.form-control,
     textarea {
         padding: 0.7rem 1rem;
         height: auto;
-        border: 2px solid var(--typographyColor);
-        font-size: inherit;
+    }
+
+    fieldset {
+        padding: 0;
     }
 
     label {
@@ -42,10 +41,6 @@ form {
         height: 4.5rem;
         padding: 0 1.5rem;
         border: 2px solid var(--typographyColor);
-    }
-
-    .picture-preview {
-        display: none;
     }
 
     input[type="date"].form-control,
