--- a/priv/lib-src/_template.edit.scss
+++ b/priv/lib-src/_template.edit.scss
@@ -7,6 +7,8 @@
     line-height: 1.4;
     font-weight: 400;
 
+    color-scheme: light;
+
     h2 {
         font-size: 1.4em;
     }
@@ -59,4 +61,10 @@
     padding: 0.5em;
     border: 2px solid var(--flagRed);
     background: color-mix(in srgb, var(--flagRed), white 70%);
+}
+
+// This doesn't work, also not really needed but hard to 
+// get out of html so hide with css for now
+.do_listfilter {
+    display: none;
 }
