--- a/priv/lib-src/_elements.typography.scss
+++ b/priv/lib-src/_elements.typography.scss
@@ -138,6 +138,10 @@ h4 {
         }
     }
 
+    p {
+        margin-bottom: 1.5em;
+    }
+
     ul, ol {
         padding-left: 1em;
         margin-left: 0;
