--- a/priv/lib/css/style.css
+++ b/priv/lib/css/style.css
@@ -648,9 +648,10 @@ h4 {
 }
 
 blockquote {
-  padding: 0;
-  margin: 2em 0 2em 2em;
+  padding: 0 0 0 2em;
+  margin: 2em 0 2em 0;
   border: none;
+  border-left: 5px solid var(--primaryColor);
   font-size: 1.1em;
   line-height: 1.5;
   color: var(--primaryColor);
@@ -659,9 +660,6 @@ blockquote {
 }
 blockquote p {
   display: inline;
-}
-blockquote:before, blockquote:after {
-  content: '"';
 }
 @media only screen and (min-width: 800px) {
   blockquote {
