blockquote styling tweaks

--- a/priv/lib-src/_elements.typography.scss
+++ b/priv/lib-src/_elements.typography.scss
@@ -188,12 +188,15 @@ blockquote {
         display: inline;
     }
 
-    // &:before,
-    // &:after {
-    //     content:'"'
-    // }
-
     @include breakpoint($mediumBreakpoint) {
         font-size: 1.3em;
+    }
+}
+
+body.color--flagBlack,
+body.color--flagBrown {
+    blockquote {
+        border-color: light-dark(var(--primaryColor), white);
+        color: light-dark(var(--primaryColor), white);
     }
 }
