--- a/priv/lib/css/style.css
+++ b/priv/lib/css/style.css
@@ -1010,7 +1010,7 @@ body.color--flagBrown .c-btn-add-event path {
   align-items: center;
   flex-flow: row wrap;
   gap: 0.5em;
-  margin: 0 0 0.5em;
+  margin: 0 0 1em;
   text-transform: uppercase;
 }
 .c-calendar-item__date span {
@@ -1025,6 +1025,11 @@ body.color--flagBrown .c-btn-add-event path {
   width: 2px;
   height: 0.7lh;
   background: var(--darkTheme);
+}
+@media only screen and (min-width: 800px) {
+  .c-calendar-item__date {
+    margin-bottom: 0.5em;
+  }
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -1070,11 +1075,11 @@ body.color--flagBrown .c-btn-add-event path {
 }
 
 .c-calendar-item__address {
-  margin: 0 0 0.5em;
+  margin: 0 0 1em;
 }
 
 .c-calendar-item__details {
-  margin-top: 0.3em;
+  margin-top: 1em;
 }
 .c-calendar-item__details:open summary {
   padding-left: calc(1lh + 0.5em);
@@ -1114,6 +1119,11 @@ body.color--flagBrown .c-btn-add-event path {
   text-decoration: none;
   border-radius: 50%;
   transition: left 0.3s;
+}
+@media only screen and (min-width: 800px) {
+  .c-calendar-item__details {
+    margin-top: 0.5em;
+  }
 }
 
 .c-calendar-item__details__content {
@@ -1187,7 +1197,6 @@ body.color--flagBrown .c-footer {
   display: flex;
   flex-flow: row wrap;
   gap: 0.5rem;
-  margin: 0.5em 0 0 0;
   font-size: 0.7em;
 }
 
