--- a/priv/lib/css/style.css
+++ b/priv/lib/css/style.css
@@ -1196,7 +1196,7 @@ body.color--flagBrown .c-footer {
   position: relative;
   color: var(--darkTheme);
   background: light-dark(var(--lightTheme), color-mix(in srgb, var(--lightTheme), var(--bodyBg) 30%));
-  border: 1px solid light-dark(var(--darkTheme), var(--lightTheme));
+  border: 1px solid var(--darkTheme);
 }
 .c-keyword-list__item.-desc:before {
   content: "i";
