--- a/priv/lib-src/_elements.typography.scss
+++ b/priv/lib-src/_elements.typography.scss
@@ -4,6 +4,7 @@ body {
     font-size: 16px;
     line-height: 1.4;
     font-weight: 400;
+    // word-spacing: -0.2em;
 
     @include breakpoint($largeBreakpoint) {
         font-size: 18px;
@@ -171,6 +172,11 @@ h4 {
     p + h2 {
         margin-top: 1em;
     }
+}
+
+sup {
+    top: -0.7em;
+    left: -0.5em;
 }
 
 blockquote {
