Make dialog background white, add pagelen of many items

--- a/priv/lib-src/_components.calendar.scss
+++ b/priv/lib-src/_components.calendar.scss
@@ -140,7 +140,7 @@
     width: 90%;
     max-width: 70ch;
     padding: 1em;
-    background: var(--lightTheme);
+    background: white;
     border: 3px solid var(--darkTheme); 
 
     h3 {
