--- a/priv/lib-src/_components.buttons.scss
+++ b/priv/lib-src/_components.buttons.scss
@@ -6,17 +6,14 @@ button {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    min-height: 5rem;
-    padding: 0.1em 1.3em 0 1.3em;
+    min-height: 4.5rem;
+    padding: 0 1.3em;
     background: var(--typographyColor);
     border: 2px solid transparent;
     text-decoration: none;
     font-family: var(--primaryFont);
     color: #fff;
-    font-size: 1.5em;
-    line-height: 0;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
+    line-height: 1;
     cursor: pointer;
     transition: color 0.2s, border 0.2s, background 0.3s ease-out;
 
