--- a/priv/lib-src/_elements.form.scss
+++ b/priv/lib-src/_elements.form.scss
@@ -39,8 +39,8 @@ form {
     select.form-control,
     select {
         height: 4.5rem;
-        padding: 0 1.5rem;
-        border: 2px solid var(--typographyColor);
+        padding: 0 3rem 0 1.5rem;
+        border: 2px solid var(--darkTheme);
     }
 
     input[type="date"].form-control,
