--- a/priv/lib-src/style.scss
+++ b/priv/lib-src/style.scss
@@ -12,6 +12,7 @@
 
 @import "components.buttons";
 @import "components.calendar";
+@import "components.filters";
 @import "components.footer";
 @import "components.keyword-list";
 @import "components.nav";
