--- a/priv/lib/css/style.css
+++ b/priv/lib/css/style.css
@@ -717,8 +717,8 @@ form label {
 form select.form-control,
 form select {
   height: 4.5rem;
-  padding: 0 1.5rem;
-  border: 2px solid var(--typographyColor);
+  padding: 0 3rem 0 1.5rem;
+  border: 2px solid var(--darkTheme);
 }
 form input[type=date].form-control,
 form input[type=date],
@@ -786,17 +786,14 @@ button {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  min-height: 5rem;
-  padding: 0.1em 1.3em 0 1.3em;
+  min-height: 4.5rem;
+  padding: 0 1.3em;
   background: var(--typographyColor);
   border: 2px solid transparent;
   text-decoration: none;
   font-family: var(--primaryFont);
   color: #fff;
-  font-size: 1.5em;
-  line-height: 0;
-  letter-spacing: 0.02em;
-  text-transform: uppercase;
+  line-height: 1;
   cursor: pointer;
   transition: color 0.2s, border 0.2s, background 0.3s ease-out;
   -webkit-font-smoothing: antialiased;
@@ -1109,6 +1106,51 @@ body.color--flagBrown .c-btn-add-event path {
   display: inline-flex;
   margin-left: 1em;
   font-size: 0.8em;
+}
+
+.c-filters {
+  margin-bottom: 2em;
+}
+@media only screen and (min-width: 800px) {
+  .c-filters {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+}
+
+.c-filters__keywords {
+  margin: 2em 0 0;
+}
+@media only screen and (min-width: 800px) {
+  .c-filters__keywords {
+    margin: 0;
+  }
+}
+
+.c-btn-filter-submit {
+  display: none;
+}
+
+.c-filters__keywords {
+  width: fit-content;
+  position: relative;
+}
+.c-filters__keywords select {
+  appearance: none;
+}
+.c-filters__keywords:after {
+  content: "";
+  width: 0;
+  height: 0;
+  position: absolute;
+  top: 19px;
+  right: 10px;
+  border-top: 10px solid var(--darkTheme);
+  border-bottom: 10px solid transparent;
+  border-left: 7px solid transparent;
+  border-right: 7px solid transparent;
 }
 
 .c-footer {
