Replace space with nbsp, add goatcounter

--- a/priv/lib-src/_components.calendar.scss
+++ b/priv/lib-src/_components.calendar.scss
@@ -155,6 +155,7 @@
     border: none;
     text-decoration: underline;
     text-underline-offset: 3px;
+    color: light-dark(white, #242424);
 }
 
 .c-calender-item__edit {
