--- a/priv/lib/css/style.css
+++ b/priv/lib/css/style.css
@@ -1156,6 +1156,7 @@ body.color--flagBrown .c-btn-add-event path {
 }
 
 .c-footer {
+  --_backTopWidth: 5rem;
   display: flex;
   flex-flow: row wrap;
   align-items: center;
@@ -1168,10 +1169,20 @@ body.color--flagBrown .c-btn-add-event path {
   line-height: 1;
   font-size: 0.9em;
 }
+@media (hover: none) {
+  .c-footer {
+    padding: 1em calc(2.5% + var(--_backTopWidth)) 1em 2.5%;
+  }
+}
 @media only screen and (min-width: 800px) {
   .c-footer {
     height: 4rem;
     padding: 0 4rem;
+  }
+}
+@media only screen and (min-width: 800px) and (hover: none) {
+  .c-footer {
+    padding: 0 calc(4rem + var(--_backTopWidth)) 0 4rem;
   }
 }
 
@@ -1206,6 +1217,31 @@ body.color--flagBrown .c-footer {
   }
 }
 
+@media (hover: none) {
+  .c-footer__top {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: space-between;
+    width: var(--_backTopWidth);
+    height: var(--_backTopWidth);
+    padding: 0.2em 0;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    z-index: 100;
+    background: var(--lightTheme);
+    border: 2px solid var(--darkTheme);
+    font-size: 9px;
+    line-height: 1.4;
+    text-decoration: none;
+    text-align: center;
+  }
+  .c-footer__top svg {
+    display: block;
+    rotate: 90deg;
+  }
+}
 .c-keyword-list {
   padding: 0;
   margin: 0;
