Add extra close in dialog

--- a/priv/lib-src/_components.calendar.scss
+++ b/priv/lib-src/_components.calendar.scss
@@ -40,7 +40,7 @@
     padding: 0 0 1em;
     position: relative;
 
-    &:after {
+    &::after {
         content: '';
         width: 100%;
         height: 2px;
@@ -156,6 +156,43 @@
     text-decoration: underline;
     text-underline-offset: 3px;
     color: light-dark(white, #242424);
+
+    @include setInteractive {
+        text-decoration: none;
+    }
+}
+
+.c-calendar-item__details-close.-top {
+    width: 4.5rem;
+    height: 4.5rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transition: scale 0.3s ease-out;
+
+    &::before,
+    &::after {
+        content: '';
+        display: block;
+        width: 2px;
+        height: 50%;
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        background: #242424;
+        border-radius: 2px;
+        rotate: 45deg;
+        transform-origin: center center;
+        
+    }
+
+    &::after {
+        rotate: -45deg;
+    }
+
+    &:hover {
+        scale: 0.9;
+    }
 }
 
 .c-calender-item__edit {
