Fix color in light theme description

--- a/priv/lib-src/_components.calendar.scss
+++ b/priv/lib-src/_components.calendar.scss
@@ -142,7 +142,7 @@
     padding: 1em;
     background: white;
     border: 3px solid var(--darkTheme); 
-    color: light-dark(white, #242424);
+    color: #242424;
 
     h3 {
         color: var(--darkTheme);
